--- a/Privilegia/Views/Partners/CreateExterno.cshtml
+++ b/Privilegia/Views/Partners/CreateExterno.cshtml
@@ -3,7 +3,7 @@
 <div class="modal-header">
     <h3>Añadir nuevo Partner Externo</h3>
 </div>
-@using (Html.BeginForm())
+@using (Html.BeginForm("CreateExterno", "Partners", null, FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     @Html.HiddenFor(m => m.Id)
@@ -13,14 +13,14 @@
             <div class="col-md-4">
                 <div class="form-group">
                     @Html.LabelFor(model => model.Cif, new { @class = "control-label" })
-                    @Html.TextBoxFor(model => model.Cif, new { @class = "form-control required", @placeholder = "Introduzca el C.I.F." })
+                    @Html.TextBoxFor(model => model.Cif, new { @class = "form-control", @placeholder = "Introduzca el C.I.F." })
                     @Html.ValidationMessageFor(model => model.Cif, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="form-group">
                     @Html.LabelFor(model => model.Nombre, new { @class = "control-label" })
-                    @Html.TextBoxFor(model => model.Nombre, new { @class = "form-control required", @placeholder = "Introduzca el Nombre del Partner" })
+                    @Html.TextBoxFor(model => model.Nombre, new { @class = "form-control", @placeholder = "Introduzca el Nombre del Partner" })
                     @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
                 </div>
 
@@ -49,7 +49,7 @@
                         new List<SelectListItem>
                         {
                             new SelectListItem {Text = "Alta", Value = "Alta"}
-                        }, new { @class = "form-control required" })
+                        }, new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.Estado, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -59,6 +59,13 @@
                     @Html.LabelFor(model => model.FechaAlta, new { @class = "control-label" })<span class="glyphicon glyphicon-calendar en_formulario"></span>
                     @Html.TextBoxFor(model => model.FechaAlta, new { @id = "datepickeralta", @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.FechaAlta, "", new { @class = "text-danger" })
+                </div>
+
+            </div>
+            <div class="col-md-2">
+                <div class="form-group">
+                    @Html.Label("Logo", new { @class = "control-label" })
+                    <input type="file" id="Logo" name="image" />
                 </div>
 
             </div>
