--- a/Privilegia/Views/Partners/Detalles.cshtml
+++ b/Privilegia/Views/Partners/Detalles.cshtml
@@ -1,5 +1,6 @@
-﻿@using Privilegia.Models
-@model Privilegia.Models.PartnerModel
+﻿
+@using Privilegia.Models
+@model PartnerModel
 
 @{
     ViewBag.Title = "Delete";
@@ -9,6 +10,16 @@
 <div>
     <hr />
     <dl class="dl-horizontal">
+        @if (Model.Logo != null && Model.Logo.FileType == FileType.Logo)
+        {
+            <dt>
+                Logo
+            </dt>
+            <dd>
+                <img src="~/Logos?id=@Model.Logo.Id" alt="logo"  width="150px" height="50px"/>
+            </dd>
+        }
+
         <dt>
             @Html.DisplayNameFor(model => model.Nombre)
         </dt>
@@ -39,11 +50,12 @@
         <div class="form-actions">          
 
             @{
-                if (Model.GetType() == typeof(PartnerInterno))
+                var modelo = Model.GetType().ToString();
+                if (Model.GetType() == typeof(Privilegia.Models.PartnerInterno))
                 {
                     <a class="btn btn-primary" href='@Url.Action("EditarPartnerInterno","Partners", new {id = Model.Id})'>Editar</a>
                 }
-                else
+                else if(Model.GetType() == typeof(Privilegia.Models.PartnerExterno))
                 {
                     <a class="btn btn-primary" href='@Url.Action("EditarPartnerExterno","Partners", new {id = Model.Id})'>Editar</a>
                 }
