--- a/Privilegia/Views/Publicidad/EditarPublicidad.cshtml
+++ b/Privilegia/Views/Publicidad/EditarPublicidad.cshtml
@@ -11,7 +11,7 @@
     <div class="modal-body">
         <div class="row">
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            <div class="col-md-2">
+            <div class="col-md-4">
                 <div class="form-group">
                     @Html.LabelFor(model => model.IdPartner, new { @class = "control-label" })
                     @Html.DropDownListFor(model => model.IdPartner, ViewBag.partners as SelectList, "Selecciona...", new { @class = "form-control input-inset" })
@@ -20,18 +20,50 @@
             </div>
             <div class="col-md-2">
                 <div class="form-group">
+                    @Html.LabelFor(model => model.PlanDeMedios, new { @class = "control-label" })
+                    @Html.CheckBoxFor(model => model.PlanDeMedios, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.PlanDeMedios, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-3">
+                <div class="form-group">
                     @Html.LabelFor(model => model.NombreEspacioPublicidad, new { @class = "control-label" })
                     @Html.DropDownListFor(model => model.NombreEspacioPublicidad, ViewBag.espacios as SelectList, "Selecciona...", new { @class = "form-control input-inset", @onchange = "cargarPartes(this);" })
                     @Html.ValidationMessageFor(model => model.NombreEspacioPublicidad, "", new { @class = "text-danger" })
                 </div>
             </div>
-            <div class="col-md-2">
+            <div class="col-md-3">
                 <div class="form-group">
                     @Html.LabelFor(model => model.NombreParteEspacioPublicidad, new { @class = "control-label" })
                     @Html.DropDownListFor(model => model.NombreParteEspacioPublicidad, new List<SelectListItem>(), "Selecciona...", new { @id = "partes", @class = "form-control input-inset" })
                     @Html.ValidationMessageFor(model => model.NombreParteEspacioPublicidad, "", new { @class = "text-danger" })
                 </div>
             </div>
+            <div class="col-md-2">
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Importe, new { @class = "control-label" })<span class="glyphicon glyphicon-eur en_formulario"></span>
+                    @Html.TextBoxFor(model => model.Importe, new { @class = "form-control", @type = "number", @onkeyup = "CalcularTotal();" })
+                    @Html.ValidationMessageFor(model => model.Importe, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="col-md-2">
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Descuento, new { @class = "control-label" })<span class="fa fa-percent en_formulario"></span>
+                    @Html.TextBoxFor(model => model.Descuento, new { @class = "form-control", @type = "number", @onkeyup = "CalcularTotal();" })
+                    @Html.ValidationMessageFor(model => model.Descuento, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="col-md-2">
+                <div class="form-group">
+                    @Html.LabelFor(model => model.Total, new { @class = "control-label" })<span class="glyphicon glyphicon-eur en_formulario"></span>
+                    @Html.TextBoxFor(model => model.Total, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.Total, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+        <div class="row">
             <div class="col-md-2">
                 <div class="form-group">
                     @Html.LabelFor(model => model.FechaInicio, new { @class = "control-label" })<span class="glyphicon glyphicon-calendar en_formulario"></span>
@@ -44,13 +76,6 @@
                     @Html.LabelFor(model => model.FechaFin, new { @class = "control-label" })<span class="glyphicon glyphicon-calendar en_formulario"></span>
                     @Html.TextBoxFor(model => model.FechaFin, new { @id = "fechaFinDatePicker", @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.FechaFin, "", new { @class = "text-danger" })
-                </div>
-            </div>
-            <div class="col-md-2">
-                <div class="form-group">
-                    @Html.LabelFor(model => model.Importe, new { @class = "control-label" })<span class="glyphicon glyphicon-eur en_formulario"></span>
-                    @Html.TextBoxFor(model => model.Importe, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.Importe, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
@@ -80,6 +105,22 @@
 
 <script type="text/javascript">
 
+    function CalcularTotal() {
+        var importe = document.getElementById('Importe').value;
+        var descuento = document.getElementById('Descuento').value;
+        var total = document.getElementById('Total');
+
+        if (importe !== "" && descuento !== "") {
+            document.getElementById('Total').value = importe - ( importe * (descuento / 100));
+        }else if (importe !== "") {
+            document.getElementById('Total').value = importe;
+        } else {
+            console.log("nada");
+        }
+
+    }
+
+
     function cargarPartes(espacio) {
 
         if (espacio.value !== "") {
@@ -94,6 +135,7 @@
                     // Create an Option object
                     $('#partes').html('');
                     for (var i = 0; i < data.lista.length; i++) {
+                        console.log(data.lista[i]);
 
                         var opt = document.createElement("option");
 
@@ -112,54 +154,15 @@
             });
         }
 
-
-
-
-
         return true;
-
-    }
-
-    function loadPartes() {
-        console.log("@Model.NombreEspacioPublicidad");
-        $.ajax({
-            url: '/Publicidad/CargarPartes',
-            type: 'POST',
-            data: {
-                'espacio': "@Model.NombreEspacioPublicidad"
-            },
-            success: function (data) {
-                // Create an Option object
-                $('#partes').html('');
-                for (var i = 0; i < data.lista.length; i++) {
-
-                    var opt = document.createElement("option");
-
-                    // Assign text and value to Option object
-                    opt.text = data.lista[i].Nombre;
-                    opt.value = data.lista[i].Nombre;
-
-                    if (data.lista[i].Nombre === "@Model.NombreParteEspacioPublicidad") {
-                        opt.selected = true;
-                    }
-
-                    // Add an Option object to Drop Down List Box
-                    document.getElementById('partes').options.add(opt);
-                }
-
-            },
-            error: function () {
-                //Si hemos tenido error
-            }
-        });
-
-
 
     }
 
     $('document').ready(function () {
 
-        loadPartes();
+        document.getElementById('Importe').value = "";
+        document.getElementById('Descuento').value = "";
+        document.getElementById('Total').value = "";
 
         $("#fechaInicioDatePicker").datepicker({
             format: "dd/mm/yyyy",
@@ -176,5 +179,3 @@
 
     });
 </script>
-
-
